[gd_scene load_steps=42 format=2]

[ext_resource path="res://common/pets/Pet.gd" type="Script" id=1]
[ext_resource path="res://common/pets/00/00_egg_idle.png" type="Texture" id=2]
[ext_resource path="res://common/pets/00/00_baby_idle.png" type="Texture" id=3]
[ext_resource path="res://common/gfx/emotes/death.png" type="Texture" id=4]
[ext_resource path="res://common/gfx/emotes/heart.png" type="Texture" id=5]
[ext_resource path="res://common/gfx/emotes/help.png" type="Texture" id=6]
[ext_resource path="res://common/items/pizza.png" type="Texture" id=7]
[ext_resource path="res://common/items/ball.png" type="Texture" id=8]
[ext_resource path="res://common/items/shot.png" type="Texture" id=9]
[ext_resource path="res://common/items/bootle.png" type="Texture" id=10]
[ext_resource path="res://common/pets/00/00_boy_idle.png" type="Texture" id=11]
[ext_resource path="res://common/pets/00/00_adult_idle.png" type="Texture" id=12]
[ext_resource path="res://common/items/game_game.png" type="Texture" id=13]
[ext_resource path="res://common/items/beer.png" type="Texture" id=14]
[ext_resource path="res://common/gfx/emotes/poop.png" type="Texture" id=15]
[ext_resource path="res://common/pets/00/00_dead.png" type="Texture" id=16]
[ext_resource path="res://common/sfx/grow.wav" type="AudioStream" id=17]
[ext_resource path="res://common/sfx/eat.wav" type="AudioStream" id=18]
[ext_resource path="res://common/sfx/death.wav" type="AudioStream" id=19]
[ext_resource path="res://common/sfx/bathroom.wav" type="AudioStream" id=20]
[ext_resource path="res://common/sfx/select.wav" type="AudioStream" id=21]
[ext_resource path="res://common/sfx/hit.wav" type="AudioStream" id=22]

[sub_resource type="Animation" id=11]
resource_name = "Bathroom"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -200, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/PetSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -200, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SFX/BathroomAudio:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.6, 4.8, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, false, true ]
}

[sub_resource type="Animation" id=10]
resource_name = "Food"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/FoodSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2.1, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -48, 0 ), Vector2( -32, 0 ), Vector2( -48, 0 ), Vector2( -32, 0 ), Vector2( -64, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SFX/SelectAudio:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SFX/HitAudio:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 2.1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SFX/EatAudio:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=8]
resource_name = "Play Animation"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/ActionSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 32, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SFX/HitAudio:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SFX/BathroomAudio:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SFX/HitAudio:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SFX/SelectAudio:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SFX/EatAudio:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 12 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 16 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 11 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "adult_idle",
"speed": 1.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "egg_idle",
"speed": 1.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "baby_idle",
"speed": 1.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "death",
"speed": 1.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "kid_idle",
"speed": 1.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "love",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "help",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "ball-action",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "shot-action",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "pizza-action",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "beer-action",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "game-action",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "bottle-action",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "bottle",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "beer",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "pizza",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "poop",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Pet" type="Sprite" groups=["pet"]]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Bathroom = SubResource( 11 )
anims/Food = SubResource( 10 )
"anims/Play Animation" = SubResource( 8 )
anims/RESET = SubResource( 19 )

[node name="Sprites" type="Node2D" parent="."]

[node name="PetSprite" type="AnimatedSprite" parent="Sprites"]
frames = SubResource( 3 )
animation = "egg_idle"
playing = true

[node name="EmoteSprite" type="AnimatedSprite" parent="Sprites"]
position = Vector2( 0, -16 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 6 )
animation = "idle"

[node name="ActionSprite" type="AnimatedSprite" parent="Sprites"]
frames = SubResource( 7 )
offset = Vector2( -32, 0 )

[node name="FoodSprite" type="AnimatedSprite" parent="Sprites"]
frames = SubResource( 9 )
animation = "idle"
offset = Vector2( 64, 0 )

[node name="BathroomSprite" type="AnimatedSprite" parent="Sprites"]
frames = SubResource( 16 )
offset = Vector2( 0, 32 )

[node name="Timers" type="Node" parent="."]

[node name="GrowthTimer" type="Timer" parent="Timers"]
wait_time = 90.0
autostart = true

[node name="BathroomTimer" type="Timer" parent="Timers"]
wait_time = 960.0
autostart = true

[node name="HungerTimer" type="Timer" parent="Timers"]
wait_time = 60.0

[node name="SickTimer" type="Timer" parent="Timers"]
wait_time = 480.0
autostart = true

[node name="HealthTimer" type="Timer" parent="Timers"]
wait_time = 5.0
autostart = true

[node name="SFX" type="Node" parent="."]

[node name="GrowAudio" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 17 )

[node name="EatAudio" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 18 )

[node name="DeathAudio" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 19 )

[node name="BathroomAudio" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 20 )

[node name="SelectAudio" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 21 )

[node name="HitAudio" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 22 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timers/GrowthTimer" to="." method="_on_GrowthTimer_timeout"]
[connection signal="timeout" from="Timers/BathroomTimer" to="." method="_on_BathroomTimer_timeout"]
[connection signal="timeout" from="Timers/HungerTimer" to="." method="_on_HungerTimer_timeout"]
[connection signal="timeout" from="Timers/SickTimer" to="." method="_on_SickTimer_timeout"]
[connection signal="timeout" from="Timers/HealthTimer" to="." method="_on_HealthTimer_timeout"]
